# insolvia

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  analysis_options.yaml  melos.yaml  pubspec.yaml  ruff.toml
services/api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
services/api/scripts/: dev-setup.sh  dev-test.sh  dev-up.sh
services/api/src/insolvia_api/: __init__.py
services/api/src/insolvia_api/adapters/: __init__.py
services/api/src/insolvia_api/api/: __init__.py  (+2 more)
services/api/tests/: conftest.py  test_architecture.py  test_config.py  test_cors.py  test_health.py  test_logging.py  test_mail.py  test_mailer_client.py  test_unsubscribe.py  test_waitlist.py
services/inbound_forwarder/: pyproject.toml
services/inbound_forwarder/src/inbound_forwarder/: __init__.py  handler.py
services/inbound_forwarder/tests/: test_handler.py
services/mailer/: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
services/mailer/contracts/: attachment-upload-request.schema.json  message-request.schema.json  status-event.schema.json  suppression-request.schema.json
services/mailer/contracts/examples/: message.json
services/mailer/docs/: onboarding.md  operations.md
services/mailer/scripts/: dev-setup.sh  dev-test.sh  dev-up.sh
services/mailer/src/insolvia_mailer/: __init__.py
services/mailer/tests/: conftest.py  test_api_gateway_adapter.py  test_architecture.py  test_auth.py  test_aws_store.py  test_development_api.py  test_feedback.py  test_mime.py  test_models.py  test_sender.py  test_suppressions.py
(+210 files in other folders)
