[project]
name = "insolvia-inbound-forwarder"
version = "0.1.0"
description = "SES inbound forwarder for the insolvia.ai support addresses"
requires-python = ">=3.11"
# Runtime deps are provided by the AWS Lambda Python 3.11 runtime:
#   - boto3 (bundled in the runtime)
#   - the standard-library `email` package for MIME parsing
# No third-party packages are vendored, so the deployment artifact is just the
# `inbound_forwarder` package zipped by Terraform.
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
