[project]
name = "insolvia-mailer"
version = "0.1.0"
description = "Insolvia transactional email service — SigV4 ingress, S3 manifests, SQS, SES sender (mailer port)"
requires-python = ">=3.12"
# Runtime dependencies are pinned in requirements.txt, mirroring services/api;
# the Docker image and CI install from there rather than from this metadata.
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
